Update the auth endpoint specs
